unpackaged/main/default/objects/zkfedex__FedExPrinterSettings__c/zkfedex__FedExPrinterSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores global printer</description>
    <label>FedEx Printer Settings</label>
</CustomObject>