unpackaged/main/default/objects/zkfedex__FedExPrinterSettings__c/fields/zkfedex__DocPrinterTray__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DocPrinterTray__c</fullName>
    <label>Doc Printer Tray</label>
    <length>255</length>
    <type>Text</type>
</CustomField>