unpackaged/main/default/objects/zkfedex__FedExPrinterSettings__c/fields/zkfedex__NonThermalPrinterId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__NonThermalPrinterId__c</fullName>
    <label>NonThermalPrinterId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>