unpackaged/main/default/objects/zkfedex__FedExPrinterSettings__c/fields/zkfedex__NonThermalPrinterTray__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__NonThermalPrinterTray__c</fullName>
    <label>Non Thermal Printer Tray</label>
    <length>255</length>
    <type>Text</type>
</CustomField>