unpackaged/main/default/objects/zkfedex__FedExPrinterSettings__c/fields/zkfedex__ThermalPrinterId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ThermalPrinterId__c</fullName>
    <label>ThermalPrinterId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>